# serializer version: 1
# name: test_settings
  Settings(api=SettingsAPI(token='token', port=9170), autostart=False, keyboard_hotkeys=[], log_level='INFO', media=SettingsMedia(directories=[]))
# ---
# name: test_settings_command_definition
  SettingsCommandDefinition(id='test-command-id', name='Test Command', command='/usr/bin/test', workingDir='/tmp', arguments=['arg1', 'arg2'])
# ---
# name: test_settings_command_definition_defaults
  SettingsCommandDefinition(id='test-command-id', name='Test Command', command='/usr/bin/test', workingDir='', arguments=[])
# ---
# name: test_settings_commands
  SettingsCommands(allowlist=[SettingsCommandDefinition(id='test-command-id', name='Test Command', command='/usr/bin/test', workingDir='', arguments=[])])
# ---
# name: test_settings_commands_empty
  SettingsCommands(allowlist=[])
# ---
# name: test_settings_with_commands
  Settings(api=SettingsAPI(token='token', port=9170), autostart=False, keyboard_hotkeys=[], log_level='INFO', media=SettingsMedia(directories=[]), commands=SettingsCommands(allowlist=[SettingsCommandDefinition(id='test-command-id', name='Test Command', command='/usr/bin/test', workingDir='', arguments=[])]))
# ---
